errors.txt
    Checking rvsrg v0.1.0 (C:\Users\Osef\rvsrg)
error[E0282]: type annotations needed
   --> src\logic\state.rs:135:67
    |
135 |                     menu.beatmapsets = Arc::new(guard.beatmapsets.as_ref().clone());
    |                                                                   ^^^^^^   ----- type must be known at this point
    |
help: try using a fully qualified path to specify the expected types
    |
135 -                     menu.beatmapsets = Arc::new(guard.beatmapsets.as_ref().clone());
135 +                     menu.beatmapsets = Arc::new(<std::vec::Vec<(Beatmapset, std::vec::Vec<BeatmapWithRatings>)> as AsRef<T>>::as_ref(&guard.beatmapsets).clone());
    |

warning: unused variable: `keys_held`
   --> src\logic\engine.rs:540:13
    |
540 |         let keys_held = self.keys_held.clone();
    |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_keys_held`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: variable `hit_window_updated` is assigned to, but never used
   --> src\render\renderer.rs:511:25
    |
511 |                 let mut hit_window_updated = false;
    |                         ^^^^^^^^^^^^^^^^^^
    |
    = note: consider using `_hit_window_updated` instead

warning: value assigned to `hit_window_updated` is never read
   --> src\render\renderer.rs:535:25
    |
535 |                         hit_window_updated = true;
    |                         ^^^^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` on by default

warning: unused variable: `song_button_texture`
   --> src\render\resources.rs:294:13
    |
294 |         let song_button_texture = load_egui_tex(skin.get_song_button_image(), "song_btn");
    |             ^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_song_button_texture`

warning: unused variable: `song_button_selected_texture`
   --> src\render\resources.rs:295:13
    |
295 |         let song_button_selected_texture =
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_song_button_selected_texture`

warning: unused variable: `difficulty_button_texture`
   --> src\render\resources.rs:297:13
    |
297 |         let difficulty_button_texture =
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_difficulty_button_texture`

warning: unused variable: `difficulty_button_selected_texture`
   --> src\render\resources.rs:299:13
    |
299 |         let difficulty_button_selected_texture =
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_difficulty_button_selected_texture`

warning: unused variable: `beatmap_info_bg_texture`
   --> src\render\resources.rs:302:13
    |
302 |         let beatmap_info_bg_texture =
    |             ^^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_beatmap_info_bg_texture`

warning: unused variable: `search_panel_bg_texture`
   --> src\render\resources.rs:304:13
    |
304 |         let search_panel_bg_texture =
    |             ^^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_search_panel_bg_texture`

warning: unused variable: `search_bar_texture`
   --> src\render\resources.rs:306:13
    |
306 |         let search_bar_texture = load_egui_tex(skin.get_search_bar_image(), "search_bar");
    |             ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_search_bar_texture`

warning: unused variable: `leaderboard_bg_texture`
   --> src\render\resources.rs:307:13
    |
307 |         let leaderboard_bg_texture =
    |             ^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_leaderboard_bg_texture`

warning: unused variable: `mine_bind_group`
   --> src\render\resources.rs:632:13
    |
632 |         let mine_bind_group =
    |             ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_mine_bind_group`

warning: unused variable: `hold_body_bind_group`
   --> src\render\resources.rs:634:13
    |
634 |         let hold_body_bind_group =
    |             ^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_hold_body_bind_group`

warning: unused variable: `hold_end_bind_group`
   --> src\render\resources.rs:636:13
    |
636 |         let hold_end_bind_group =
    |             ^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_hold_end_bind_group`

warning: unused variable: `burst_body_bind_group`
   --> src\render\resources.rs:638:13
    |
638 |         let burst_body_bind_group =
    |             ^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_burst_body_bind_group`

warning: unused variable: `burst_end_bind_group`
   --> src\render\resources.rs:640:13
    |
640 |         let burst_end_bind_group =
    |             ^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_burst_end_bind_group`

warning: unused variable: `screen_height`
   --> src\render\resources.rs:733:69
    |
733 |     pub fn update_component_positions(&mut self, screen_width: f32, screen_height: f32) {
    |                                                                     ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_screen_height`

For more information about this error, try `rustc --explain E0282`.
warning: `rvsrg` (bin "rvsrg") generated 17 warnings
error: could not compile `rvsrg` (bin "rvsrg") due to 1 previous error; 17 warnings emitted
